fix overflow and site link

--- a/src/components/OverlayGrid.less
+++ b/src/components/OverlayGrid.less
@@ -21,10 +21,8 @@
 
 .image-col {
 	padding-bottom: 1rem;
-	overflow: auto;
 }
 
 .text-col {
 	padding-left: 1rem;
-	overflow: auto;
 }
